# blogsapp

./: Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml
sql/: init-db.sql  wait-for-db.sh
src/: manage.py
src/blogs/: admin.py  api_urls.py  models.py  permissions.py  queries.py  serializers.py  validation.py  views.py
src/blogs/migrations/: 0001_initial.py
src/blogsapp/: settings.py  urls.py
